--- a/index.html
+++ b/index.html
@@ -4,57 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <style>
-        body {
-            background-image: url('image/background.png'); 
-            background-size: cover; 
-            background-position: center;
-            color: #fff;
-        }
-        .contact-form-container {
-            background: rgba(0, 0, 0, 0.10);
-            border-radius: 8px;
-            padding: 2rem;
-            margin-top: 5rem;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-        }
-        .form-control {
-            border-radius: 0.25rem;
-        }
-        .btn-primary {
-            border-radius: 0.25rem;
-        }
-        .alert {
-            margin-top: 1rem;
-        }
-    </style>
+    <!-- Link ke file CSS eksternal -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container d-flex justify-content-center">
-        <div class="contact-form-container col-md-8 col-lg-6">
+    <div class="container">
+        <div class="contact-form-container">
             <h2 class="text-center">Contact Form</h2>
             <form action="process_form.php" method="POST">
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="name" class="form-label">Name</label>
                     <input type="text" class="form-control" id="name" name="name" required>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" name="email" required>
                 </div>
-                <div class="mb-3">
+                <div class="form-group">
                     <label for="message" class="form-label">Message</label>
                     <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary w-100">Submit</button>
+                <button type="submit" class="btn-submit">Submit</button>
             </form>
         </div>
     </div>
-
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
