--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="wrapper">
+        <div class="left-section"></div>
+        <div class="right-section"> 
         <div class="contact-form-container">
             <h2 class="text-center">Contact Form</h2>
             <form action="process_form.php" method="POST">
