--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Contact Form</title>
     <!-- Link ke file CSS eksternal -->
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <div class="wrapper">
@@ -27,6 +28,25 @@
                     <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
                 </div>
                 <button type="submit" class="btn-submit">Submit</button>
+                <div class="left-section-content">
+                    <!-- Gambar atau judul -->
+                    <img src="image/logo.png" alt="Company Logo" class="logo-img">
+                    <h1>Welcome to Our Website</h1>
+                    <p>Your one-stop solution for all your needs.</p>
+                    
+                    <!-- Sosial Media -->
+                    <div class="social-links">
+                        <a href="https://facebook.com" class="social-icon">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a href="https://twitter.com" class="social-icon">
+                            <i class="fab fa-twitter"></i>
+                        </a>
+                        <a href="https://instagram.com" class="social-icon">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </div>                    
+                </div>
             </form>
         </div>
     </div>
