--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <button type="submit" class="btn-submit">Submit</button>
                 <div class="left-section-content">
 
-                    <h1>Welcome to Our Website</h1>
+                    <h1>Welcome to contact form</h1>
                     <p>Your one-stop solution for all your needs.</p>
     
                     <!-- Sosial Media -->
